<resources>
    <string name="app_name">MineShoes</string>
    <string name="menu_main_home">Home</string>
    <string name="menu_main_cart">Cart</string>
    <string name="menu_main_favorites">Favorites</string>
    <string name="menu_main_myaccount">My Account</string>
    <string name="menu_main_department">Departments</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
